Added Update Functionality

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "apply-middleware": "^1.0.3",
     "axios": "^0.21.4",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "npm": "^7.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
