--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "apply-middleware": "^1.0.3",
     "axios": "^0.21.4",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "npm": "^7.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
